# artificial-artisan

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
artisanbackend/: artisan-settings.toml  artisanutils.py  manage.py
artisanbackend/artisanbackend/: asgi.py  settings.py  urls.py  wsgi.py
artisanbackend/backoffice/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
artisanbackend/backoffice/static/backoffice/css/: style.css
artisanbackend/backoffice/templates/backoffice/: base.html  login.html  product-list.html
artisanbackend/store/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
demosite/: config.toml
demosite/css/: base.css  index.css
demosite/templates/: global-head.html  global-nav.html  index-head.html  index.html
