[tool.poetry]
name = "artisanbackend"
version = "0.1.0"
description = ""
authors = ["Jonathan Lloyd <jonathan@thisisjonathan.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
